@@ -51,6 +51,7 @@ gnulib_modules="
   times
   unistd
   unlink
+  vsnprintf
   round
 "
 
